# brunojose1977-fiap-tech-challenger-fase5

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROMPT_CRIAÇÃO_PROJETO_PYTHON.txt  README.md  REQUIREMENTS.txt  docker-compose.yml  prototipo_carga_de_diagramas_do_dataset_do_Kaggle_e_análise_STRIDE_v6.ipynb  pyproject.toml  soma.py
docker/: entrypoint.sh
docs/: Estrutura-do-projeto.docx  Evidencia de Execução e Conclusão do Programa.docx  Roteiro-passo-a-passo.rtf  comandos.txt
docs/relatório final da análise STRIDE/: analise_stride_20260710_010411.json
relatorio/: analise_stride_20260709_232327.json  analise_stride_20260715_233926.json
src/stride_analyzer/: __init__.py  cli.py  config.py  dataset.py  filter.py  image_analysis.py  paths.py  reports.py  stride.py
tests/: conftest.py  test_cli.py  test_config.py  test_dataset.py  test_filter.py  test_image_analysis.py  test_paths.py  test_reports.py  test_stride.py
