[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stride-analyzer"
version = "1.0.0"
description = "Carga de diagramas do Kaggle e análise de segurança STRIDE"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "TechChallenger" }]
dependencies = [
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "transformers>=4.36.0",
    "torch>=2.0.0",
    "kaggle>=1.6.0",
    "openai>=1.0.0",
    "reportlab>=4.0.0",
    "python-docx>=1.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[project.scripts]
stride-analyzer = "stride_analyzer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.coverage.run]
source = ["stride_analyzer"]
omit = ["*/tests/*"]
